tests/sksl/errors/ArraySplitDimensionsInFuncBody.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
1 error
